@@ -8,7 +8,7 @@
 	http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-3.2.xsd
 	http://www.springframework.org/schema/util http://www.springframework.org/schema/util/spring-util-3.2.xsd
         http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-3.2.xsd"
-       profile="cmdi-production,cmdi-production-ams,cmdi-adapter-ams">
+       profile="hybrid-production,hybrid-production-ams">
 
     <!--
         Spring configuration of adapter AMS services
