@@ -8,14 +8,14 @@
 	http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-3.2.xsd
 	http://www.springframework.org/schema/util http://www.springframework.org/schema/util/spring-util-3.2.xsd
         http://www.springframework.org/schema/context http://www.springframework.org/schema/context/spring-context-3.2.xsd"
-       profile="cmdi-production,cmdi-production-providers">
+       profile="hybrid-production,hybrid-production-providers">
     	
 
     <!-- 
 	Spring configuration for node presentations.
 	
-            These beans should get picked up by the metadata browser wicket application as long as the 'cmdi-production' profile
-            or 'cmdi-production-providers' is active.
+            These beans should get picked up by the metadata browser wicket application as long as the 'hybrid-production' profile
+            or 'hybrid-production-providers' is active.
     -->
 
     <context:annotation-config />
